# C-Template

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md
src/: CMakeLists.txt  main.c  template.c  template.h
src/common/: utils.c  utils.h
tst/: CMakeLists.txt  Makefile  common_tests_utils.c  common_tests_utils.h  test_template.c
