#--------------------------------------------------------
#       SET EXECUTABLES
#--------------------------------------------------------

set(APP_EXECUTABLE main)

#--------------------------------------------------------
#       SET SOURCES
#--------------------------------------------------------
file(GLOB SOURCE_FILES
        "*.c"
        )

#--------------------------------------------------------
#       TARGETS CONFIG
#--------------------------------------------------------

add_executable(${APP_EXECUTABLE} ${SOURCE_FILES})
