#--------------------------------------------------------
#       SET EXECUTABLES
#--------------------------------------------------------

set(APP_EXECUTABLE main)

#--------------------------------------------------------
#       SET SOURCES
#--------------------------------------------------------
file(GLOB SOURCE_FILES
        "common/*.c"
        "*.c"
        )

#--------------------------------------------------------
#       TARGETS CONFIG
#--------------------------------------------------------

add_executable(${APP_EXECUTABLE} ${SOURCE_FILES})
